--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 EMAIL=petweb2002@gmail.com
-DB_URI=mongodb+srv://ramoncrivelari:9UjLvfGS6I1JPo1L@projetoweb2.b7bw8vu.mongodb.net/?retryWrites=true&w=majority
-DB_NAME=ProjetoWeb2
 PASSWORD=ifhivpddvgulibja
+MONGODB_URI=mongodb+srv://ramoncrivelari:9UjLvfGS6I1JPo1L@projetoweb2.b7bw8vu.mongodb.net/?retryWrites=true&w=majority
+DATABASE_NAME=ProjetoWeb2
 JWT_PASSWORD=progweb2
